--- a/MovieLens.ipynb
+++ b/MovieLens.ipynb
@@ -29,8 +29,22 @@
    "outputs": [],
    "source": [
     "movies = pd.read_csv('ml-latest-small/movies.csv')\n",
-    "ratings = pd.read_csv('ml-latest-small/ratings.csv')\n",
-    "tags = pd.read_csv('ml-latest-small/tags.csv')"
+    "ratings = pd.read_csv('ml-latest-small/ratings.csv', usecols = ['userId', 'movieId', 'rating'])\n",
+    "tags = pd.read_csv('ml-latest-small/tags.csv', usecols = ['userId', 'movieId', 'tag'])\n",
+    "links = pd.read_csv('ml-latest-small/links.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fee59e7-386d-4d46-85aa-128f1e2bc144",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = {i:lambda x: '|'.join(list(x)) for i in tags.columns[2:]}\n",
+    "tags = tags.groupby(['userId', 'movieId']).agg(g).reset_index()\n",
+    "movies = pd.merge(movies, links, on=['movieId'])\n",
+    "reviews = pd.merge(ratings, tags, on=['userId', 'movieId'])"
    ]
   },
   {
@@ -41,8 +55,32 @@
    "outputs": [],
    "source": [
     "print(\"Movies head:\\n\", movies.head())\n",
-    "print(\"Ratings head:\\n\", ratings.head())\n",
-    "print(\"Tags head:\\n\", tags.head())"
+    "print(\"Reviews head:\\n\", reviews.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8ad9273-f067-4216-8c7f-e249e75cd221",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_df = reviews.groupby(by=['rating']).agg({'userId': 'count'}).rename(columns={'userId': 'count'}).reset_index()\n",
+    "plt.bar(ratings_df['rating'], ratings_df['count'], align='center', width=0.3)\n",
+    "plt.xticks(ratings_df['rating'])\n",
+    "plt.title(\"Rating vs Count\")\n",
+    "plt.xlabel(\"Rating\")\n",
+    "plt.ylabel(\"Count\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fecf65e5-10bf-4a28-afdf-305fde0bc64f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(movies)"
    ]
   },
   {
@@ -165,15 +203,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1a1eb0b6-3aba-4277-9bd3-b06a8941a2f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(top_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6e1e32e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(10,6))\n",
+    "plt.figure(figsize=(10, 6))\n",
     "top_features.plot(kind='barh')\n",
-    "plt.xlabel('Ważność cechy')\n",
-    "plt.ylabel('Cechy')\n",
-    "plt.title('Najważniejsze cechy dla przewidywania ocen filmów')\n",
+    "plt.xlabel('Feature Importance')\n",
+    "plt.ylabel('Features')\n",
+    "plt.title('Most Important Features for Predicting Movie Ratings')\n",
     "plt.show()"
    ]
   },
@@ -228,7 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "explainer = shap.TreeExplainer(model)\n",
+    "explainer = shap.TreeExplainer(model, feature_perturbation=\"interventional\")\n",
     "shap_values = explainer.shap_values(X_test)"
    ]
   },
@@ -270,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
