--- a/MovieLens.ipynb
+++ b/MovieLens.ipynb
@@ -90,52 +90,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.merge(ratings, tags, on=['userId', 'movieId'], how='left')\n",
-    "data = pd.merge(data, movies, on='movieId', how='left')\n",
-    "data = data.dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a302726",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vectorizer = TfidfVectorizer(stop_words='english', max_features=500)\n",
-    "data['tag'] = data['tag'].fillna('')\n",
-    "data['tags_combined'] = data.groupby('movieId')['tag'].transform(lambda x: ' '.join(x))\n",
-    "X_tags = vectorizer.fit_transform(data['tags_combined']).toarray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "827a33df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genres = data['genres'].str.get_dummies('|')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "283988b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = np.hstack((X_tags, genres.values))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1307f2bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = data['rating']"
+    "vectorizer = TfidfVectorizer()\n",
+    "tag_matrix = vectorizer.fit_transform(reviews['tag'].fillna(''))\n",
+    "\n",
+    "X = tag_matrix.toarray()\n",
+    "y = reviews['rating']"
    ]
   },
   {
@@ -170,12 +129,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "results = {}\n",
     "for name, model in models.items():\n",
     "    model.fit(X_train, y_train)\n",
     "    y_pred = model.predict(X_test)\n",
-    "    print(f\"Model: {name}\")\n",
-    "    print(f\"Mean Squared Error: {mean_squared_error(y_test, y_pred)}\")\n",
-    "    print(f\"R^2 Score: {r2_score(y_test, y_pred)}\")"
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "    results[name] = {'MSE': mse, 'R²': r2}\n",
+    "    print(f'{name} - MSE: {mse}, R²: {r2}')"
    ]
   },
   {
@@ -185,44 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = models['RandomForest']\n",
-    "importances = model.feature_importances_\n",
-    "feature_importances = pd.Series(importances, index=vectorizer.get_feature_names_out().tolist() + list(genres.columns)).sort_values(ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8f93417",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "top_features = feature_importances.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a1eb0b6-3aba-4277-9bd3-b06a8941a2f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(top_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e1e32e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10, 6))\n",
-    "top_features.plot(kind='barh')\n",
-    "plt.xlabel('Feature Importance')\n",
-    "plt.ylabel('Features')\n",
-    "plt.title('Most Important Features for Predicting Movie Ratings')\n",
-    "plt.show()"
+    "model = models['RandomForest']"
    ]
   },
   {
@@ -232,17 +156,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_features(new_movie_tags, new_movie_genres, tfidf, genre_columns):\n",
-    "\n",
+    "def prepare_features(new_movie_tags, tfidf):\n",
     "    tag_features = tfidf.transform([new_movie_tags]).toarray()\n",
-    "    \n",
-    "\n",
-    "    genres = new_movie_genres.split('|')\n",
-    "    genre_features = pd.DataFrame(columns=genre_columns, data=[[1 if genre in genres else 0 for genre in genre_columns]])\n",
-    "    \n",
-    "\n",
-    "    features = np.hstack((tag_features, genre_features.values))\n",
-    "    return features"
+    "    return tag_features"
    ]
   },
   {
@@ -252,8 +168,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_movie_tags = \"action packed, thrilling\"\n",
-    "new_movie_genres = \"Action|Adventure|Sci-Fi\""
+    "new_movie_tags = [\"action packed, thrilling\", \"romantic, comedy\", \"suspenseful, mysterious\"]\n",
+    "new_movie_features = [prepare_features(tags, vectorizer) for tags in new_movie_tags]"
    ]
   },
   {
@@ -263,10 +179,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_movie_features = prepare_features(new_movie_tags, new_movie_genres, vectorizer, genres.columns)\n",
-    "\n",
-    "predicted_rating = model.predict(new_movie_features)\n",
-    "print(f'Predicted Rating: {predicted_rating[0]}')"
+    "for tags, features in zip(new_movie_tags, new_movie_features):\n",
+    "    predicted_rating = best_model.predict(features)\n",
+    "    print(f'Predicted Rating for \"{tags}\": {predicted_rating[0]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "030440ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_df = reviews.groupby(by=['rating']).agg({'userId': 'count'}).rename(columns={'userId': 'count'}).reset_index()\n",
+    "plt.bar(ratings_df['rating'], ratings_df['count'], align='center', width=0.3)\n",
+    "plt.xticks(ratings_df['rating'])\n",
+    "plt.title(\"Rating vs Count\")\n",
+    "plt.xlabel(\"Rating\")\n",
+    "plt.ylabel(\"Count\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -276,8 +207,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "explainer = shap.TreeExplainer(model, feature_perturbation=\"interventional\")\n",
-    "shap_values = explainer.shap_values(X_test)"
+    "explainer = shap.Explainer(best_model)\n",
+    "shap_values = explainer(X_test)"
    ]
   },
   {
@@ -287,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shap.summary_plot(shap_values, X_test, plot_type=\"bar\")"
+    "shap.summary_plot(shap_values, X_test, feature_names=vectorizer.get_feature_names_out())"
    ]
   },
   {
@@ -318,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
