--- a/MovieLens.ipynb
+++ b/MovieLens.ipynb
@@ -61,6 +61,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ea04a4e3-d016-4434-b372-ab635a6e2348",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_info = (movies.shape[1], movies.shape[0])\n",
+    "ratings_info = (ratings.shape[1], ratings.shape[0])\n",
+    "tags_info = (tags.shape[1], tags.shape[0])\n",
+    "links_info = (links.shape[1], links.shape[0])\n",
+    "\n",
+    "print(f\"Movies: {movies_info[1]} records, {movies_info[0]} attributes\")\n",
+    "print(f\"Ratings: {ratings_info[1]} records, {ratings_info[0]} attributes\")\n",
+    "print(f\"Tags: {tags_info[1]} records, {tags_info[0]} attributes\")\n",
+    "print(f\"Links: {links_info[1]} records, {links_info[0]} attributes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b8ad9273-f067-4216-8c7f-e249e75cd221",
    "metadata": {},
    "outputs": [],
@@ -180,24 +198,8 @@
    "outputs": [],
    "source": [
     "for tags, features in zip(new_movie_tags, new_movie_features):\n",
-    "    predicted_rating = best_model.predict(features)\n",
+    "    predicted_rating = model.predict(features)\n",
     "    print(f'Predicted Rating for \"{tags}\": {predicted_rating[0]}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "030440ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ratings_df = reviews.groupby(by=['rating']).agg({'userId': 'count'}).rename(columns={'userId': 'count'}).reset_index()\n",
-    "plt.bar(ratings_df['rating'], ratings_df['count'], align='center', width=0.3)\n",
-    "plt.xticks(ratings_df['rating'])\n",
-    "plt.title(\"Rating vs Count\")\n",
-    "plt.xlabel(\"Rating\")\n",
-    "plt.ylabel(\"Count\")\n",
-    "plt.show()"
    ]
   },
   {
@@ -207,14 +209,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "explainer = shap.Explainer(best_model)\n",
-    "shap_values = explainer(X_test)"
+    "explainer = shap.Explainer(model)\n",
+    "shap_values = explainer(X_test, check_additivity=False)\n",
+    "for i in tqdm(range(len(X_test)), desc=\"Calculating SHAP values\"):\n",
+    "    shap_values.append(explainer(X_test[i], check_additivity=False))\n",
+    "shap_values = np.array(shap_values)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "65d4eb2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap_values_array = np.vstack(shap_values)\n",
+    "\n",
+    "print(shap_values_array.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1efef9ea-fdc8-4fac-8f8e-144d1331e4ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
